
2008-07-20 Renamed unit/axes_unit.py to cbook_unit.py and modified
           in accord with Ryan's move of delete_masked_points from
           axes to cbook. - EF

2008-07-18 Check for nan and inf in axes.delete_masked_points().
           This should help hexbin and scatter deal with nans. - ADS

2008-07-17 Added ability to manually select contour label locations.
           Also added a waitforbuttonpress function. - DMK

2008-07-17 Fix bug with NaNs at end of path (thanks, Andrew Straw for
           the report) - MGD

2008-07-12 Added support for external backends with the
           "module://my_backend" syntax - JDH

2008-07-11 Fix memory leak related to shared axes.  Grouper should
           store weak references. - MGD

2008-07-10 Bugfix: crash displaying fontconfig pattern - MGD

2008-07-10 Bugfix: [ 2013963 ] update_datalim_bounds in Axes not works - MGD

2008-07-10 Bugfix: [ 2014183 ] multiple imshow() causes gray edges - MGD

2008-07-09 Fix rectangular axes patch on polar plots bug - MGD

2008-07-09 Improve mathtext radical rendering - MGD

2008-07-08 Improve mathtext superscript placement - MGD

2008-07-07 Fix custom scales in pcolormesh (thanks Matthew Turk) - MGD

2008-07-03 Implemented findobj method for artist and pyplot - see
           examples/pylab_examples/findobj_demo.py - JDH

2008-06-30 Another attempt to fix TextWithDash - DSD

2008-06-30 Removed Qt4 NavigationToolbar2.destroy -- it appears to
           have been unnecessary and caused a bug reported by P.
           Raybaut - DSD

2008-06-27 Fixed tick positioning bug - MM

2008-06-27 Fix dashed text bug where text was at the wrong end of the
           dash - MGD

2008-06-26 Fix mathtext bug for expressions like $x_{\leftarrow}$ - MGD

2008-06-26 Fix direction of horizontal/vertical hatches - MGD

2008-06-25 Figure.figurePatch renamed Figure.patch, Axes.axesPatch
           renamed Axes.patch, Axes.axesFrame renamed Axes.frame,